--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "author": "Timmycheng",
     "license": "Apache-2.0",
     "dependencies": {
-        "koa": "2.0.0"
+        "koa": "2.0.0",
+        "koa-router": "7.0.0",
+        "koa-bodyparser":"3.2.0"
     }
 }
